--- a/content/blogs/Travel_Blog.Rmd
+++ b/content/blogs/Travel_Blog.Rmd
@@ -33,6 +33,12 @@ include_graphics("/img/PAK/IMG_9837.jpg", error = FALSE)
 
 ```
 
+```{r, echo=FALSE, out.width='100%',out.extra='style="background-color: white;padding:10px"',fig.align='center'}
+
+
+include_graphics("/img/PAK/IMG_9834.jpg", error = FALSE)
+
+```
 
 ```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 include_graphics("/img/PAK/IMG_9838.jpg", error = FALSE)
@@ -44,25 +50,6 @@ include_graphics("/img/PAK/IMG_9839.jpg", error = FALSE)
 
 include_graphics("/img/PAK/IMG_9841.jpg", error = FALSE)
 include_graphics("/img/PAK/IMG_9853.jpg", error = FALSE)
-```
-
-# France
-
-
-```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
-
-
-include_graphics("/img/FRANCE/IMG_2657.jpg", error = FALSE)
-include_graphics("/img/FRANCE/IMG_2661.jpg", error = FALSE)
-
-```
-
-```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
-
-
-include_graphics("/img/FRANCE/IMG_2714.jpg", error = FALSE)
-include_graphics("/img/FRANCE/IMG_2792.jpg", error = FALSE)
-
 ```
 
 # Scotland
@@ -90,10 +77,30 @@ include_graphics("/img/SCOT/IMG_2080.jpg", error = FALSE)
 
 ```
 
-```{r, echo=FALSE,fig.align='center', out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+```{r, echo=FALSE,fig.align='center', out.width='100%',out.extra='style="background-color: white;padding:10px"'}
 
 
 include_graphics("/img/SCOT/IMG_2077.jpg", error = FALSE)
 include_graphics("/img/SCOT/IMG_2026.jpg", error = FALSE)
 
 ```
+
+# France
+
+
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+
+
+include_graphics("/img/FRANCE/IMG_2657.jpg", error = FALSE)
+include_graphics("/img/FRANCE/IMG_2661.jpg", error = FALSE)
+
+```
+
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+
+
+include_graphics("/img/FRANCE/IMG_2714.jpg", error = FALSE)
+include_graphics("/img/FRANCE/IMG_2792.jpg", error = FALSE)
+
+```
+
