--- a/content/blogs/Abdullah_Rehman.Rmd
+++ b/content/blogs/Abdullah_Rehman.Rmd
@@ -19,16 +19,26 @@ library(janitor)
 library(knitr)
 library(ggplot2)
 library(kableExtra)
+library(mosaic)
+library(ggthemes)
+library(GGally)
+library(readxl)
+library(skimr)
+library(broom)
+library(tidyquant)
+library(infer)
+library(openintro)
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
 # Brexit vote analysis
 
+For one assignment, we were required to recreate the political affiliation
 We will have a look at the results of the 2016 Brexit vote in the UK. 
 
 ```{r load_brexit_data, warning=FALSE, message=FALSE,echo=FALSE}
 brexit_results <- read_csv(here::here("data","brexit_results.csv"))
 
-glimpse(brexit_results)
 ```
 
 The data comes from [Elliott Morris](https://www.thecrosstab.com/), who cleaned it and made it available through his [DataCamp class on analysing election and polling data in R](https://www.datacamp.com/courses/analyzing-election-and-polling-data-in-r).
@@ -56,22 +66,155 @@ brexit_results%>%
   labs(title = "How political affiliation translated to Brexit Voting", y="Leave % in the 2016 Brexit referendum", x="Party % in the UK 2015 general election")
 
 ```
-We can also create a scatterplot between these two variables using `geom_point`. We also add the best fit line, using `geom_smooth(method = "lm")`.
 
-```{r brexit_immigration_plot,message=FALSE,warning=FALSE}
-# ggplot(brexit_results, aes(x = born_in_uk, y = leave_share)) +
-#   geom_point(alpha=0.3) +
-#   
-#   # add a smoothing line, and use method="lm" to get the best straight-line
-#   geom_smooth(method = "lm") + 
-#   
-#   # use a white background and frame the plot with a black box
-#   theme_bw() +
-#   labs(x="Born in the UK",
-#        y="Leave Share",
-#        title = "Realtionship b/w the proportion of native born residents & leave share",
-#        subtitle = "Scatterplot",
-#        caption = 'Figure 3.4')+
-#   theme(plot.caption = element_text(hjust = 0))
-#   NULL
+
+
+
+## DATA PROJECT 2
+
+```{r read_GDP_data}
+
+
+UN_GDP_data  <-  read_excel(here::here("data", "Download-GDPconstant-USD-countries.xls"), # Excel filename
+                sheet="Download-GDPconstant-USD-countr", # Sheet name
+                skip=2) # Number of rows to skip
+
+
 ```
+
+ The first thing you need to do is to tidy the data, as it is in wide format and you must make it into long, tidy format. Please express all figures in billions (divide values by `1e9`, or $10^9$), and you want to rename the indicators into something shorter.
+
+
+```{r reshape_GDP_data}
+
+tidy_GDP_data  <-  UN_GDP_data %>%  
+  pivot_longer( cols = 4:51,
+                names_to = 'year',
+                values_to = 'value') %>% 
+  mutate(value = value/1e9,
+         IndicatorName = replace(IndicatorName, IndicatorName == 'Exports of goods and services', 'Exports'),
+         IndicatorName = replace(IndicatorName, IndicatorName == 'General government final consumption expenditure', 'Government expenditure'),
+         IndicatorName = replace(IndicatorName, IndicatorName == "Household consumption expenditure (including Non-profit institutions serving households)", 'Household expenditure'),
+         IndicatorName = replace(IndicatorName, IndicatorName == 'Imports of goods and services', 'Imports'))
+
+glimpse(tidy_GDP_data)
+
+# Let us compare GDP components for these 3 countries
+country_list <- c("United States","India", "Germany")
+
+```
+
+First, can you produce this plot?
+
+
+```{r gdp1, echo=FALSE, out.width="100%"}
+knitr::include_graphics(here::here("images", "gdp1.png"), error = FALSE)
+# clean data
+clean_table <- tidy_GDP_data %>% filter(Country %in% c("United States","India", "Germany"), IndicatorName %in% c("Gross capital formation", "Exports", "Government expenditure", "Household expenditure","Imports", ""), year                                  >=1970) %>% mutate(year = as.numeric(year)) 
+
+# plot
+clean_table %>% ggplot(aes(x = year, y = value, colour = IndicatorName, group = IndicatorName)) +
+  geom_smooth(aes(x = year, y = value), se = FALSE, span = 0.2) +
+  facet_wrap(~ Country) +
+  labs(
+    title = "GDP Components over time",
+    subtitle = "In constant 2010 USD",
+    x = NULL,
+    y = "Billion US$"
+  ) +
+  theme_bw() +
+  NULL
+```
+
+
+Secondly, recall that GDP is the sum of Household Expenditure (Consumption *C*), Gross Capital Formation (business investment *I*), Government Expenditure (G) and Net Exports (exports - imports). Even though there is an indicator `Gross Domestic Product (GDP)` in your dataframe, I would like you to calculate it given its components discussed above.
+
+> What is the % difference between what you calculated as GDP and the GDP figure included in the dataframe?
+
+As calculated below, For Germay, the % difference range from 1.0% to 1.04%. THe India range from 1.08% to 0.0%. United States range from 1.0% to 1.04%.
+
+
+```{r gdp2, echo=FALSE, out.width="100%"}
+knitr::include_graphics(here::here("images", "gdp2.png"), error = FALSE)
+
+# calculate GDP
+export <- clean_table %>% 
+  filter(IndicatorName == "Exports") %>% 
+  rename("Exports" = "IndicatorName")
+import <- clean_table %>% 
+  filter(IndicatorName == "Imports") %>% 
+  rename("Imports" = "IndicatorName")
+household_expenditure <- clean_table %>% 
+  filter(IndicatorName == "Household expenditure") %>% 
+  rename("Household expenditure" = "value")
+Government_expenditure <- clean_table %>% 
+  filter(IndicatorName == "Government expenditure") %>% 
+  rename("Government expenditure" = "value")
+Gross_capital_formation <- clean_table %>% 
+  filter(IndicatorName == "Gross capital formation") %>% 
+  rename("Gross capital formation" = "value")
+net_exports <- left_join(export, import, by = c("year", "Country")) %>% 
+  mutate(net_exports = value.x - value.y) %>% 
+  select(year, Country, net_exports)
+
+merge1 <- left_join(household_expenditure, Government_expenditure, by = c("Country", "year"))
+merge2 <- left_join(merge1, Gross_capital_formation, by = c("Country", "year")) 
+merge3 <- left_join(merge2, net_exports, by = c("Country", "year"))
+
+GDP_table <- merge3 %>% 
+  mutate(GDP = `Household expenditure`+ `Government expenditure`+ `Gross capital formation`+ net_exports) %>% 
+  select(year, Country, `Household expenditure`, `Government expenditure`, `Gross capital formation`, net_exports, GDP) %>%
+  pivot_longer(cols = 3:6, values_to = "values", names_to = "Indicator")
+
+origion_GDP <- tidy_GDP_data %>% 
+  filter(IndicatorName == "Gross Domestic Product (GDP)") %>% 
+  mutate(year = as.numeric(year)) %>% group_by(year, Country) %>% 
+  summarise(Country = Country, year = year, origin = mean(value))
+
+GDP <- GDP_table %>% 
+  select(GDP, year, Country)
+
+compare_GDP <- left_join(GDP, origion_GDP, by = c("Country" = "Country", "year" = "year")) %>% 
+  group_by(year, Country) %>% 
+  summarise(percent_diff = GDP/origin)
+
+proportion_table <- GDP_table %>% 
+  mutate(proportion = values/GDP)
+
+# plot GDP change
+compare_GDP %>% 
+  ggplot(aes(x = year, y = percent_diff)) +
+  geom_line(aes(x = year, y = percent_diff)) +
+  facet_wrap(~Country) +
+  labs(
+    title = " % difference between what you calculated as GDP and the GDP figure included in the dataframe"
+  ) +
+  theme_bw()+
+  NULL
+
+# plot proportion 
+proportion_table %>% 
+  ggplot(aes(x = year, y = proportion, colour = Indicator, group = Indicator)) +
+  geom_smooth(aes(x = year, y = proportion), se = FALSE, span = 0.1) +
+  facet_wrap(~ Country) +
+  labs(
+    title = "GDP and Its breakdown at constant 2010 prices in US Dollars",
+    x = NULL,
+    y = "proportion"
+  ) +
+  theme_bw() +
+  NULL 
+```
+
+
+
+> What is this last chart telling you? Can you explain in a couple of paragraphs the different dynamic among these three countries? 
+
+>Looking at Germany’s GDP breakdown, it’s interesting to note that household expenditures kept a quite steady proportion throughout the whole period, except around the 2008 financial crisis, of which the impact is quite noticeable for all three countries, with Germany’s gross capital formation also having a clear dip around that time. Germany being the only out of the three countries that is part of the European union, it is also interesting to note their exports increasing after the Maastricht, Amsterdam and Lisbon treaties were put into place. On a different note, we would also expect the reunification of the west and east Germanies to have a clear impact on the proportion of government expenditure, yet there does not seem to be.
+>
+>India’s GDP breakdown is quite different from Germany’s. The 2008 financial crisis is quite noticeable as well and seems to particularly have impacted exports, as other countries lost disposable income. It is interesting to note that the government expenditure is around 15% of the GDP throughout the whole period, yet that gross capital formation gains a bigger proportion whilst the proportion of household expenditure keeps on decreasing. We can infer that this is due to a growing population, with increased inequalities; bigger companies and more billionaires, but also more poverty, resulting in less household expenditure. 
+>
+>The United States’ GDP split also showcases the impact of the 2008’s financial crisis, for instance with the Federal Reserve’s help towards the bank creating a small red bump in the late 2000s, early 2010s. Overall, government expenditure’s proportion kept on decreasing as republicans were in office, reducing government spending. It is interesting to note that other major financial crisis did not really impact the way the GDP is split up (2001, 1987).
+
+
+
