--- a/content/blogs/About_Me.Rmd
+++ b/content/blogs/About_Me.Rmd
@@ -23,7 +23,7 @@ include_graphics("/img/Me.jpg", error = FALSE)
 ```
 
 
-My name is Abdullah Rehman as I have mentioned numerous times by now in this report. I am an incoming MAM student looking to pursue my passion for consulting. I was brought up in Pakistan but always had roots in England due to my extensive family here so decided to come here for my undergraduate studies.
+My name is Abdullah Rehman and I am reading the Masters in Analytics and Management at London Business School. Post my degree, I am looking to pursue my passion for consulting. I was brought up in Pakistan but always had roots in England due to my extensive family here so decided to come here for my undergraduate studies.
 
 I did my undergrad from [**University College London**](https://www.ucl.ac.uk) in *Chemical Engineering* and graduated with a first class honors. After my undergrad, I was offered a job at Accenture which I was unable to take at the time due to a few serious family problems back home and I left England for 2 years until now. I am now keen on taking a full time consulting role and looking to do my best to earn a spot in the top tier firms. 
 
@@ -39,4 +39,6 @@ Below is a list of some of my favourite books. Although I don't get the time to 
 * Three Cups of Tea
      * by Greg Mortenson and David Oliver Relin
 
-Thank you for taking the time out to read a bit about myself.
+Thank you for taking the time out to read a bit about me. 
+
+>Feel free to reach out to me in the send message section of this website if you have any queries. 
