--- a/content/blogs/myartblog.Rmd
+++ b/content/blogs/myartblog.Rmd
@@ -31,12 +31,14 @@ knitr::include_graphics("/img/ART/IMG_5564.jpg", error = FALSE)
 
 Growing on this, I started getting into art from a young age. My love for art took me around various art museums as well as weekly visits to the Tate Modern now that I am in London. 
 
-I was able to set up an onlinr profile at [**Saatchi Art Gallery**](https://www.saatchiart.com/account/artworks/1107889). You can have a look at my art portfolio through the link above.
+I was able to set up an onlinr profile at [**Saatchi Art Gallery**](https://www.saatchiart.com/account/artworks/1107889). 
+
+You can have a look at my art portfolio through the link above.
 
 My main artworks are oil on canvas some of my favourites which I am attaching below.
 
 
-```{r, out.width="50%",echo=FALSE}
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 knitr::include_graphics("/img/ART/IMG_1930.jpg", error = FALSE)
 # knitr::include_graphics("/img/ART/IMG_1932.jpg", error = FALSE)
 # knitr::include_graphics("/img/ART/IMG_5638.jpg", error = FALSE)
