--- a/content/blogs/myartblog.Rmd
+++ b/content/blogs/myartblog.Rmd
@@ -21,10 +21,14 @@ knitr::opts_chunk$set(echo = TRUE)
 My love for art stems from growing up in a household where my grandmother was an artist. She is one of my main inspirations for my artworks. 
 
 The artworks below are some of her work:
-
-```{r photos,echo=FALSE, out.width="40%"}
+```{r, echo=FALSE,fig.align='center', out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 #out.width="70%"
 knitr::include_graphics("/img/ART/IMG_5567.jpg", error = FALSE)
+```
+
+```{r, echo=FALSE,fig.align='center', out.width='50%',out.extra='style="background-color: white;padding:10px"'}
+#out.width="70%"
+# knitr::include_graphics("/img/ART/IMG_5567.jpg", error = FALSE)
 
 knitr::include_graphics("/img/ART/IMG_5564.jpg", error = FALSE)
 ```
@@ -45,13 +49,13 @@ knitr::include_graphics("/img/ART/IMG_1930.jpg", error = FALSE)
 
 ```
 
-```{r, out.width="50%",echo=FALSE}
+````{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 
 knitr::include_graphics("/img/ART/IMG_1932.jpg", error = FALSE)
 
 ```
 
-```{r, out.width="50%",echo=FALSE}
+```{r, echo=FALSE, out.width='50%',out.extra='style="background-color: white;padding:10px"'}
 
 knitr::include_graphics("/img/ART/IMG_5638.jpg", error = FALSE)
 
